--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
 
     <div class="logo">
-      <img src="https://scontent.fcjs3-1.fna.fbcdn.net/v/t39.30808-6/480854990_941990018043505_5100769187801264923_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=a5f93a&_nc_ohc=5rC69owmIQYQ7kNvwHLXU4u&_nc_oc=Adl0Vov8-aWuaejourSsrgOjF9YbYUp7qPz54kOunqBTCb26osrXWXeiH8gJPtWlle8&_nc_zt=23&_nc_ht=scontent.fcjs3-1.fna&_nc_gid=Lkk5YwLMbpk0glLyD37LdQ&oh=00_AfXQH2jb9hmnbDYmGqGYH0mv2Cyin3V_UL3ogellUve_BQ&oe=68A54498" alt="Logo COPALI" />
+      <img src="https://tse4.mm.bing.net/th/id/OIP.AuIwiZx8ViKtBQx-rAQPqQHaHa?rs=1&pid=ImgDetMain&o=7&rm=3" alt="Logo COPALI" />
     </div>
 
     <h1>Colegio Patria y Libertad</h1>
@@ -37,19 +37,24 @@
 
   <section class="programs">
     <div class="program">
-      <img src="https://iunis.edu.mx/path-to-image.jpg" alt="Contaduría Pública y Finanzas">
-      <h2>Lic. en Contaduría Pública y Finanzas</h2>
-      <p>Formación integral en contaduría y finanzas con enfoque ético y profesional.</p>
+      <img src="https://iunis.edu.mx/path-to-image.jpg" alt="Educación Preescolar">
+      <h2>Educación Preescolar</h2>
+      <p>...</p>
     </div>
     <div class="program">
-      <img src="https://iunis.edu.mx/path-to-image.jpg" alt="Enfermería">
-      <h2>Licenciatura en Enfermería</h2>
-      <p>Preparación para brindar cuidados de salud con conocimientos científicos y humanísticos.</p>
+      <img src="https://iunis.edu.mx/path-to-image.jpg" alt="Educación Primaria">
+      <h2>Educación Primaria</h2>
+      <p>...</p>
+    </div>
+    <div class="program">
+      <img src="https://iunis.edu.mx/path-to-image.jpg" alt="Educación Secundaria">
+      <h2>Educación Secundaria</h2>
+      <p>...</p>
     </div>
   </section>
 
   <footer>
-    <h1>Todos los Derechos Reservados - IUNIS - 2024</h1> <p>Contacto: 999 928 9415</p>
+    <h1>Todos los Derechos Reservados - COPALI - 2025</h1> <p>Contacto: 9919590949</p>
   </footer>
 </body>
 </html>
